data/derived/fa15/progs/unify/prog0206.ml.out
Characters 24-67:
  let _ = assoc (-1,"bob",[("ranjit",85);("william",23);("moose",44)]);;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string * int
